# fastapi-example

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/api/dependencies/: authentication.py
app/db/migrations/versions/: fdf8821871d7_main_tables.py
app/models/domain/: articles.py  comments.py  defaultmodel.py  profiles.py  users.py
app/models/schemas/: articles.py  comments.py  defaultchema.py  users.py
conf/: postgresql.conf
