[tool.poetry]
name = "fastapi-example-app"
version = "0.1.0"
description = "Backend logic implementation for FastAPI"
authors = ["Keunreol Park<ritter4u@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.8"
fastapi = {version = "^0.85.0",extras = ["all"]}
uvicorn = "0.18.3"
passlib = {version = "^1.7",extras = ["bcrypt"]}
pyjwt = "^2.5.0"
sqlalchemy = "^1.4.41"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
syncpg = "^1.1.2"
psycopg2-binary = "^2.7"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
